# nest-snapshots

./: Makefile.in  acinclude.m4  aclocal.m4  bootstrap.sh  configure  configure.ac  configure.ac.in
conngen/: Makefile.in  cg_connect.cpp  conngenmodule.cpp  conngenmodule.h
doc/: ChangeLog.html  Makefile  Makefile.in  quickref.html
examples/: Makefile  Makefile.in
examples/nest/: Makefile  Makefile.am  Makefile.in  brunel-2000.sli  brunel-sli_connect.sli  tsodyks2_shortterm_bursts.sli  tsodyks_facilitating.sli  tsodyks_shortterm_bursts.sli
examples/nest/Brette_et_al_2007/: cuba_stdp.sli
extras/: Makefile  Makefile.in  nest-config
lib/: Makefile  Makefile.in
libltdl/: configure  libtool
libnestutil/: Makefile.in  config.h.in
librandom/: Makefile.in  gsl_binomial_randomdev.cpp  gsl_binomial_randomdev.h  gslrandomgen.h  poisson_randomdev.cpp  random_numbers.h
models/: Makefile.am  Makefile.in  gamma_sup_generator.cpp  iaf_neuron.h  iaf_psc_alpha.cpp  iaf_psc_exp.cpp  iaf_psc_exp.h  modelsmodule.cpp  noise_generator.cpp  pp_psc_delta.cpp  pp_psc_delta.h  ppd_sup_generator.cpp  spike_generator.cpp  spike_generator.h  stdp_connection_facetshw_hom.cpp  stdp_connection_hom.cpp  stdp_pl_connection_hom.cpp
nest/: Makefile.in  neststartup.cpp
nestkernel/: Makefile.am  Makefile.in  communicator.cpp  communicator.h  connection_manager.cpp  connectiondatum.cpp  exceptions.cpp  exceptions.h  genericmodel.h  nest_names.cpp  nest_names.h  nestmodule.cpp  nestmodule.h  network.cpp  network.h  node.cpp  node.h  recording_device.cpp  scheduler.cpp  scheduler.h
(+75 files in other folders)
